fixed several compiler warnings and implemented maven's official test skip property to properly skip phases in all plugins, not just surefire. this also enables us to run tests from maven again, via `mvn verify -Dmaven.test.skip=false`