@@ -12,6 +12,8 @@
 	</scm>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.test.skip>true</maven.test.skip>
+		<maven.test.argLine>--enable-preview -javaagent:"${project.build.directory}/${project.build.finalName}.jar"</maven.test.argLine> <!-- jar must be present in order to run CallbacksTest -->
 	</properties>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -84,21 +86,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
-				<configuration>
-					<skipTests>true</skipTests>
-					<argLine>-javaagent:"target/${project.build.finalName}.jar"</argLine> <!-- jar must be present in order to run CallbacksTest -->
-				</configuration>
+				<version>3.0.0-M5</version>
 			</plugin>
 		</plugins>
 	</build>
-	<repositories>
-		<repository>
-			<id>java.net-Public</id>
-			<name>Maven Java Net Snapshots and Releases</name>
-			<url>https://maven.java.net/content/repositories/public/</url>
-		</repository>
-	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
@@ -178,7 +169,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.13</version>
+			<version>4.13.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
